src/component/date-picker/date-picker.component.scss
deja-date-picker {
	position: relative;

	.datepicker-actions {
		position: absolute;
		right: 0;
		top: 50%;
		transform: translateY(-50%);
		z-index: 2;

		button {
			background: none;
			border: none;
			margin-left: 0.2rem;
			padding: 0;
			outline: none;
			color: inherit;
			cursor: pointer;
			opacity: 0.4;

			&:hover {
				opacity: 0.8;
			}

			[fontIcon] {
				font-size: 100%;
			}
		}
	}
}

.deja-datepicker-overlay-container {
	overflow: visible;

	.actions {
		position: absolute;
		right: 0.3rem;
		top: 0.3rem;

		button.mat-mini-fab {
			background: none;
			border: none;
			box-shadow: none;
		}
	}
}

